[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://SFX/GameSounds_v1/OST - menu.wav" type="AudioStream" id=2]
[ext_resource path="res://GFX/Interface/MENU_V2/MENU_GLOWNE_layer01_background.png" type="Texture" id=3]
[ext_resource path="res://GFX/Interface/metalPanel.png" type="Texture" id=4]
[ext_resource path="res://new_theme.tres" type="Theme" id=5]
[ext_resource path="res://Fonts/LuckiestGuy.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://GFX/Interface/MENU_V2/MENU_GAME_OVER_przycisk_NEW_GAME_nieWcisniety.png" type="Texture" id=7]
[ext_resource path="res://GFX/Interface/MENU_V2/MENU_GAME_OVER_przycisk_NEW_GAME_wcisniety.png" type="Texture" id=8]
[ext_resource path="res://SFX/GameSounds_v1/menu klik.wav" type="AudioStream" id=9]
[ext_resource path="res://GFX/Interface/MENU_V2/MENU_GAME_OVER_przycisk_MENU_nieWcisniety.png" type="Texture" id=10]
[ext_resource path="res://GFX/Interface/MENU_V2/MENU_GAME_OVER_przycisk_MENU_wcisniety.png" type="Texture" id=11]
[ext_resource path="res://GFX/Interface/MENU_V2/MENU_GAME_OVER_przycisk_EXIT_nieWcisniety.png" type="Texture" id=12]
[ext_resource path="res://GFX/Interface/MENU_V2/MENU_GAME_OVER_przycisk_EXIT_wcisniety.png" type="Texture" id=13]

[sub_resource type="Animation" id=1]

resource_name = "load_new_level"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "load_new_level"
} ]
}

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GameOverScreen" type="Node2D"]

pause_mode = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Rect" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/load_new_level = SubResource( 1 )
blend_times = [  ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer" index="0"]

self_modulate = Color( 0.117188, 0.0306702, 0.0306702, 0.502745 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 640, 360 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Material", "Pause", "Rect", "Visibility" ]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 240, 232 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/CenterContainer" index="0"]

self_modulate = Color( 0.396078, 0.615686, 0.423529, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 64.0
margin_right = 440.0
margin_bottom = 296.0
rect_min_size = Vector2( 240, 232 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
_sections_unfolded = [ "Patch Margin", "Rect", "Visibility" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/NinePatchRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 240, 232 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
alignment = 1
_sections_unfolded = [ "Margin", "Rect", "Theme" ]

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 27.0
margin_right = 240.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme", "custom_fonts" ]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 240.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Margin" ]

[node name="NewGameButton" type="TextureButton" parent="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer/CenterContainer" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_right = 204.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Pause", "Textures" ]

[node name="Click" type="AudioStreamPlayer" parent="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/NewGameButton" index="0"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="CenterContainer3" type="CenterContainer" parent="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 240.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="MenuButton" type="TextureButton" parent="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer/CenterContainer3" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_right = 204.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
_sections_unfolded = [ "Pause", "Textures", "custom_fonts" ]

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 164.0
margin_right = 240.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="Exit" type="TextureButton" parent="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer/CenterContainer2" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_right = 204.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )
_sections_unfolded = [ "Pause", "Rect", "Textures" ]

[connection signal="pressed" from="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]

[connection signal="pressed" from="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer/CenterContainer3/MenuButton" to="." method="_on_MenuButton_pressed"]

[connection signal="pressed" from="CanvasLayer/CenterContainer/NinePatchRect/VBoxContainer/CenterContainer2/Exit" to="." method="_on_Exit_pressed"]


